maj 2020, fix rll >20 + roll template

--- a/Pendragon-french/Pendragon-french.css
+++ b/Pendragon-french/Pendragon-french.css
@@ -32,18 +32,18 @@ input.sheet-tab + span::before
     border-bottom-color: black;
     text-align: center;
     display: inline-block;
-    
+
     background: #fff;
     background: -moz-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
     background: -webkit-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
     background: -ms-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
     background: -o-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
     background: linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
-    
+
     width: 150px;
     height: 20px;
     font-size: 18px;
-    
+
     position: absolute;
     top: 70px;
     left: 30px;
@@ -69,7 +69,7 @@ input.sheet-tab2 + span::before
 {
 left: 180px;
 
-    
+
     background: #fff;
     background: -moz-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
     background: -webkit-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
@@ -131,18 +131,18 @@ div.sheet-tab-content
 .sheet-carac1  {
     font-size: 1em;
      width: 8em;
- 
+
 }
 
 .sheet-carac2, .sheet-carac3  {
     font-size: 1em;
      width: 2em;
- 
+
 }
 .sheet-comp  {
     font-size: 1em;
      width: 2em;
- 
+
 }
 
 .sheet-carac3 {
@@ -167,25 +167,144 @@ select.sheet-dtype {
     display: inline-block;
     width: 145px;
     margin-right: 3px;
-  
+
 }
 
 /* compétences */
 .sheet-comp{
-   
-   
+
+
 }
 /*.sheet-comp label {
-     display: inline;     
+     display: inline;
 
-    
+
 }
 
 .sheet-comp input, .sheet-comp button,  .sheet-comp checkbox {
-    display: inline;     
+    display: inline;
 }*/
 sheet-titre2 {
-   display: inline-block; 
+   display: inline-block;
    width: 120px;
 }
 
+/*tests 2020*/
+.sheet-rolltemplate-wod table {
+    width: 189px;
+    height: 189px;
+    padding: 2px;
+    background: url(http://i.imgur.com/xBk4U1p.jpg) top left;
+    background-size: 189px 189px;
+    background-repeat: no-repeat;
+    font-family: "Courier New", Courier, monospace;
+    font-weight: bold;
+    border-spacing: 0;
+}
+
+.sheet-rolltemplate-wod th {
+    color: rgb(112, 0, 0);
+    padding: 15px 2px 2px 20px;
+    line-height: 1.2em;
+    font-size: 1.2em;
+    text-align: left;
+}
+
+
+.sheet-rolltemplate-wod td {
+    padding-left: 20px;
+    font-size: 1.0em;
+    vertical-align: top;
+}
+
+.sheet-rolltemplate-wod .sheet-result {
+    font-size: 1.2em;
+    text-align: center;
+    color: rgb(112, 0, 0);
+    padding-bottom: 20px;
+}
+
+.sheet-rolltemplate-wod .inlinerollresult  {
+    background-color: transparent;
+    color: #000000;
+    border: none;
+}
+
+.sheet-rolltemplate-wod .inlinerollresult.fullcrit {
+    color: #3FB315;
+    border: none;
+}
+
+.sheet-rolltemplate-wod .inlinerollresult.fullfail {
+    color: #000000;
+    border: none;
+}
+
+.sheet-rolltemplate-wod .inlinerollresult.importantroll {
+    color: #3FB315;
+    border: none;
+}
+  /*rolltemplate pendragon*/
+  .sheet-rolltemplate-pendragon table {
+      width: 80%;
+      height: auto;
+      padding: 2px;
+      margin: 3px;
+      background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTjFIgRZDePX_Z-8nHvv0HVliSoJ-iasYHKIiTXtqrfpsZ7CnIU) top left;
+      background-size: cover;
+      background-repeat: no-repeat;
+      font-family: "Courier New", Courier, monospace;
+      font-weight: bold;
+      border-spacing: 0;
+  }
+.sheet-rolltemplate-pendragon th {
+    font-size: 1.3em;
+    line-height: 1.5em;
+    padding: 10px;
+
+}
+
+.sheet-rolltemplate-pendragon .sheet-padding {
+    padding: 10px;
+}
+
+.sheet-rolltemplate-pendragon tr {
+    margin-top: 3px;
+}
+
+.sheet-rolltemplate-pendragon td {
+    padding: 5px;
+    margin: 10px 3px 3px;
+}
+
+.sheet-rolltemplate-pendragon  .sheet-padding-top {
+    padding-top: 10px;
+    padding-bottom: 0px;
+}
+
+.sheet-rolltemplate-pendragon  .sheet-padding-bottom {
+    padding-top: 0px;
+    padding-bottom: 10px;
+}
+
+.sheet-rolltemplate-pendragon  .sheet-middle {
+    text-align: center;
+}
+
+.sheet-rolltemplate-pendragon  .sheet-red {
+    color: darkred;
+}
+
+.sheet-rolltemplate-pendragon  .sheet-green {
+    color: #0B6623;
+}
+
+.sheet-rolltemplate-pendragon .inlinerollresult {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+}
+
+.sheet-rolltemplate-pendragon .sheet-border_bottom {
+    border-bottom: 2px solid;
+}
