--- a/Shadowrun4thEdition/Shadowrun4thEdition.pug
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.pug
@@ -12,7 +12,7 @@ input.character-type(name='attr_flag_special' type='hidden' value='mundane')
 //- VARIABLES
 //-include src/pug/_variables.pug
 
-- const imageSource = 'https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/src/imgs/'
+- const imageSource = 'https://raw.githubusercontent.com/clevett/roll20-character-sheets/shadowrun4ev1/Shadowrun4thEdition/src/imgs/'
 
 
 .pc
@@ -31,11 +31,11 @@ input.character-type(name='attr_flag_special' type='hidden' value='mundane')
     each val, key in {'wounds': '@{wounds}', 'modifiers':'?{Modifiers +/-|0}', 'edge':'@{edge}'}
       h2(data-i18n-title=key) #{key}
       label.switch(data-i18n-title=key title=key)
-        input.whisper-toggle(name='attr_'+key+'_toggle' type='checkbox' value=val)
+        input.whisper-toggle(name=`attr_${key}_toggle` type='checkbox' value=val)
         span.slider
     button(name='d6' title='Roll D6s' type='roll' value!='@{gm_toggle} &{template:rolls}{{header=^{d6}}}{{base=^{d6}}}{{dice=[[(?{d6s|0}d6>5)]]}}') L
     input(name='attr_tab' type='hidden' value='options')
     button.pictos(name='act_tab_options' title='@{tab}' type='action' ) y
     each val in ['core', 'arms', 'augs', 'gear', 'magic', 'matrix', 'social', 'vehicle']
-      button(data-i18n=val name='act_tab_'+val type='action' title='@{tab}') #{val}
+      button(data-i18n=val name=`act_tab_${val}` type='action' title='@{tab}') #{val}
 
