--- a/Shadowrun4thEdition/src/scss/abstracts/_variables.scss
+++ b/Shadowrun4thEdition/src/scss/abstracts/_variables.scss
@@ -1,15 +1,20 @@
 //- Colors:
-  $gold: #FCD116;
-  $red: #610b0d;
-  $purple: #7a2593;
+  $primary: rgba(175,211,226,1);
+  $secondary: rgba(245,245,245,1);
+  $accent: #610b0d;
+  $accent1: #7a2593;
   $lightgray: #9a9a9a;
   $graytrans: rgba(28, 28, 28, 0.14902);
   $grayshadow: #7c7c7c;
-  $blacker: #040404;
+  $blacker: #333;
   $ccc: #cccccc;
   //- GRAY IN ROLL TEMPLATE
   $blackish: #1c1c1c;
   //-(primaryly on the NPC sheet)
   $gray: #555;
-  $blacker: #040404;
   $white: #fff;
+
+$tabs:'arms', 'augs', 'core', 'gear', 'options', 'social', 'magic', 'matrix', 'vehicle';
+$characterTypes: 'npc', 'pc';
+$specialCharacters: 'magic', 'resonance';
+$npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
