--- a/Shadowrun4thEdition/src/scss/base/_base.scss
+++ b/Shadowrun4thEdition/src/scss/base/_base.scss
@@ -1,6 +1,7 @@
 	* {
 	    box-sizing: border-box;
-	    font-family: sans-serif;}
+	    font-family: sans-serif;
+    }
 
 	button {
 		background-image: none;
@@ -34,9 +35,13 @@
 	    }
 	}
 
-	div {background-color: transparent;}
+	div {
+    background-color: transparent;
+  }
 
-	fieldset { background: transparent;}
+	fieldset { 
+    background: transparent;
+  }
 
 	hr {
 		border: 0.5px solid #555;
@@ -88,9 +93,21 @@
 		border: 1px solid #000;
 		box-shadow: inset 0px 0px 3px 1px #7c7c7c;
 		margin-bottom: 0px;
-		width: auto;}
+		width: auto;
 
-	span { word-break: break-word; }
+    &.sheet-attribute-select {
+      option:nth-of-type(1n+5) { color: $accent1; }
+      option:nth-of-type(1n+9) { color: $accent;  }
+    }
+
+    &.sheet-limit-select  {
+      option:nth-of-type(1n+5) { color: $accent1; }
+    }
+  }
+
+	span { 
+    word-break: break-word; 
+  }
 
 	textarea {
 		border-radius: 2px;
@@ -103,9 +120,15 @@
 		vertical-align: top;
 		white-space: pre-line;}
 
-	.charsheet { width: 850px; }
+	.charsheet {
+    background: rgb(175,211,226);
+    background: linear-gradient(90deg, rgba(175,211,226,1) 0%, rgba(245,245,245,1) 17%, rgba(255,255,255,1) 78%, rgba(175,211,226,1) 100%);
+    width: 850px; 
+    box-shadow: inset 0px 0px 3px 1px #7c7c7c;
+    color: $blacker;
+  }
 
-	.sheet-red {color: $red;  }
+	.sheet-red {color: $secondary;  }
 	.sheet-text-align-center {text-align: center;}
 
 	input[name='attr_stats_toggle'],
