--- a/Shadowrun4thEdition/src/scss/components/_switch.scss
+++ b/Shadowrun4thEdition/src/scss/components/_switch.scss
@@ -4,14 +4,15 @@
   display: inline-block;
   width: 50px;
   height: 24px;
+
+  /* Hide default HTML checkbox */
+  & input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
 }
 
-/* Hide default HTML checkbox */
-.sheet-switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
 
 /* The slider */
 .sheet-slider {
@@ -25,27 +26,27 @@
   right: 0;
   top: 0;
   transition: .4s;
-}
 
-.sheet-slider:before {
-  -webkit-transition: .4s;
-  background-color: white;
-  border-radius: 50%;
-  bottom: 4px;
-  content: "";
-  height: 16px;
-  left: 4px;
-  position: absolute;
-  transition: .4s;
-  width: 16px;
+  &:before {
+    -webkit-transition: .4s;
+    background-color: white;
+    border-radius: 50%;
+    bottom: 4px;
+    content: "";
+    height: 16px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 16px;
+  }
 }
 
 input:checked + .sheet-slider {
-  background-color: $red;
+  background-color: $blackish;
 }
 
 input:focus + .sheet-slider {
-  box-shadow: 0 0 1px $lightgray;
+  box-shadow: 0 0 1px $blackish;
 }
 
 input:checked + .sheet-slider:before {
