--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1896,12 +1896,25 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 /* -- ACTIVE DEFENSE -- */
-.sheet-active-defense .sheet-col0 { width: calc(100% - 169px); }
+.sheet-active-defense .sheet-col0 {
+    margin-left: 22px;
+    width: calc(100% - 191px);
+}
 .sheet-active-defense .sheet-col0 input { text-align:left; }
 .sheet-active-defense .sheet-col1 { width: 65px; }
 .sheet-active-defense .sheet-col2 { width: 40px; }
 .sheet-active-defense .sheet-col3 { width: 30px; }
 .sheet-active-defense .sheet-col4 { width: 22px; }
+
+/* -- Active Defense Note Box -- */
+.sheet-active-defense .sheet-toggle-notes {
+    position: absolute;
+    left: 0;
+}
+
+.sheet-box.sheet-active-defense .sheet-toggle.sheet-toggle-notes ~ .sheet-checkbox {
+    left: 0;
+}
 
 /* Text Area Box Styling for Defense Bonus (DB) Notes*/
 .sheet-defense-bonus-notes .sheet-header .sheet-col0 {
