--- a/Shadowrun4thEdition/Shadowrun4thEdition.css
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.css
@@ -20,10 +20,11 @@ button {
     border-radius: 0.25em !important;
     border-right: 0.02em solid #333333;
     border-style: outset; }
+    button[type='roll']:hover, button[type='roll']:focus, button[type='roll']:active, button[type='action']:hover, button[type='action']:focus, button[type='action']:active {
+      font-weight: bold;
+      background-color: #1e4583; }
   button:before {
     display: none; }
-  button:hover, button:focus, button:active {
-    font-weight: bold; }
   button > span {
     display: block;
     overflow: hidden;
@@ -71,23 +72,23 @@ input {
 
 select {
   border-radius: 2px;
-  border: 1px solid #000;
+  border: 1px solid #1c1c1c;
   box-shadow: inset 0px 0px 3px 1px #7c7c7c;
   margin-bottom: 0px;
   width: auto; }
   select.sheet-attribute-select option:nth-of-type(1n+5) {
-    color: #7a2593; }
+    color: #1e4583; }
   select.sheet-attribute-select option:nth-of-type(1n+9) {
     color: #610b0d; }
   select.sheet-limit-select option:nth-of-type(1n+5) {
-    color: #7a2593; }
+    color: #1e4583; }
 
 span {
   word-break: break-word; }
 
 textarea {
   border-radius: 2px;
-  border: 1px solid #000;
+  border: 1px solid #1c1c1c;
   box-shadow: inset 0px 0px 3px 1px #7c7c7c;
   height: 50px;
   overflow-wrap: break-word;
@@ -103,12 +104,6 @@ textarea {
   box-shadow: inset 0px 0px 3px 1px #7c7c7c;
   color: #333; }
 
-.sheet-red {
-  color: whitesmoke; }
-
-.sheet-text-align-center {
-  text-align: center; }
-
 input[name='attr_stats_toggle'],
 input[name='attr_stats_toggle'] + span {
   position: relative; }
@@ -116,11 +111,6 @@ input[name='attr_stats_toggle'] + span {
 input[name='attr_stats_toggle'] {
   opacity: 0;
   z-index: 2; }
-
-.sheet-eclipse {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap; }
 
 .sheet-pc div.sheet-repeating-container div.repitem, .sheet-pc div.sheet-repeating-container div.repitem div.sheet-settings, .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.sheet-headers, .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.sheet-headers, .sheet-pc div.sheet-skill-box div.sheet-row-long, .sheet-pc div.sheet-arms div.sheet-headers, .sheet-pc div.sheet-magic div.sheet-headers, .sheet-pc div.sheet-matrix div.sheet-complex-forms div.sheet-headers {
   grid-column-gap: 1%;
@@ -157,6 +147,24 @@ input.sheet-toggle {
 
 .sheet-pc div.sheet-repeating-container div.repitem, .sheet-pc div.sheet-repeating-container div.repitem input[type='text'], .sheet-pc div.sheet-repeating-container div.repitem input[type='number'], .sheet-pc div.sheet-skill-box label > input, .sheet-pc div.sheet-skill-box input[name='attr_skill'], .sheet-pc div.sheet-matrix div.sheet-programs div.repitem {
   border-bottom: 1px solid #333; }
+
+.sheet-red {
+  color: #1e4583; }
+
+.sheet-text-align-center,
+.sheet-center {
+  text-align: center; }
+
+.sheet-eclipse {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+
+.sheet-text-capitalize {
+  text-transform: capitalize; }
+
+.sheet-text-left {
+  text-align: left; }
 
 /* SWITCHES
 	============================= */
@@ -207,28 +215,30 @@ input:checked + .sheet-slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px); }
 
-.sheet-tabs button[type='action'] {
-  background-color: #333;
+.sheet-tabs button {
+  background-color: #1c1c1c;
   border-radius: 2px;
   border: 1px solid #000;
-  box-shadow: inset 0px 0px 3px 1px #7c7c7c;
-  color: #fff;
   font-size: 1em;
   font-weight: bolder;
   text-transform: capitalize;
   padding: 5px; }
-  .sheet-tabs button[type='action'].sheet-pictos, .sheet-tabs .sheet-cc-row button[type='action'][name*='shots'], .sheet-cc-row .sheet-tabs button[type='action'][name*='shots'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_reload'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_reload'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_primary_ammo'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_primary_ammo'], .sheet-tabs .repcontrol button[type='action'].repcontrol_edit:after, .repcontrol .sheet-tabs button[type='action'].repcontrol_edit:after,
-  .sheet-tabs .repcontrol button[type='action'].repcontrol_add:after,
-  .repcontrol .sheet-tabs button[type='action'].repcontrol_add:after, .sheet-tabs .itemcontrol button[type='action'].repcontrol_del, .itemcontrol .sheet-tabs button[type='action'].repcontrol_del {
+  .sheet-tabs button[type='action'] {
+    box-shadow: inset 0px 0px 3px 1px #7c7c7c;
+    color: #fff; }
+  .sheet-tabs button.sheet-pictos, .sheet-tabs .sheet-cc-row button[name*='shots'], .sheet-cc-row .sheet-tabs button[name*='shots'], .sheet-tabs .sheet-cc-row button[name='act_reload'], .sheet-cc-row .sheet-tabs button[name='act_reload'], .sheet-tabs .sheet-cc-row button[name='act_primary_ammo'], .sheet-cc-row .sheet-tabs button[name='act_primary_ammo'], .sheet-tabs .repcontrol button.repcontrol_edit:after, .repcontrol .sheet-tabs button.repcontrol_edit:after,
+  .sheet-tabs .repcontrol button.repcontrol_add:after,
+  .repcontrol .sheet-tabs button.repcontrol_add:after, .sheet-tabs .itemcontrol button.repcontrol_del, .itemcontrol .sheet-tabs button.repcontrol_del {
     text-transform: lowercase; }
-.sheet-tabs button[type='roll'] {
-  background: none;
-  border: none;
-  font-family: 'dicefontd6';
-  font-size: 2.5em;
-  vertical-align: top; }
-  .sheet-tabs button[type='roll']:hover {
-    text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #e31715; }
+  .sheet-tabs button[type='roll'] {
+    background: none;
+    border: none;
+    font-family: 'dicefontd6';
+    font-size: 2.5em;
+    vertical-align: top; }
+    .sheet-tabs button[type='roll']:hover {
+      text-shadow: 1px 1px 2px black, 0 0 25px #1e4583, 0 0 5px #7c7c7c;
+      color: #fff; }
 .sheet-tabs h2 {
   font-size: 1em;
   text-transform: capitalize;
@@ -249,16 +259,6 @@ input:checked + .sheet-slider:before {
   width: 20px; }
 
 /***** GENERIC STYLES *****/
-.sheet-center {
-  text-align: center; }
-
-select.sheet-attribute-select option:nth-of-type(1n+5) {
-  color: #7a2593; }
-select.sheet-attribute-select option:nth-of-type(1n+9) {
-  color: #610b0d; }
-select.sheet-limit-select option:nth-of-type(1n+5) {
-  color: #7a2593; }
-
 /*:+:+:+: MATRIX DEVICE :+:+:+:*/
 div.sheet-matrix-device button[name*='Attack']:hover {
   color: #cc0701; }
@@ -306,7 +306,8 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   /***** MAGIC *****/
   /*** MATRIX ****/
   /*** SOCIAL ****/
-  /*** Vehicle ****/ }
+  /*** Vehicle ****/
+  /***** SECONDARY HEADERS LIKE ON SKILLS *****/ }
   .sheet-pc button > h2:hover,
   .sheet-pc button > span:hover,
   .sheet-pc label > button[type='roll']:hover,
@@ -314,9 +315,9 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-pc .sheet-con-track button[type='action']:hover,
   .sheet-pc button[data-i18n='default']:hover {
     color: #fff;
-    text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #7a2593; }
+    text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #1e4583; }
   .sheet-pc h1 {
-    background-color: #7a2593;
+    background-color: #afd3e2;
     font-size: 1em;
     letter-spacing: 2px;
     line-height: 20px;
@@ -397,7 +398,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-pc input.sheet-settings-flag:checked + span,
   .sheet-pc input.sheet-collapse-flag:checked + span,
   .sheet-pc input[type='radio']:checked + span {
-    color: #7a2593; }
+    color: #1e4583; }
   .sheet-pc select {
     height: 1.8em;
     padding: 0px;
@@ -412,12 +413,12 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-pc input.sheet-display-flag {
     position: absolute; }
   .sheet-pc div.sheet-border-box {
-    background-image: -moz-linear-gradient(#7a2593, transparent), -moz-linear-gradient(#7a2593, transparent);
-    background-image: -o-linear-gradient(#7a2593, transparent), -o-linear-gradient(#7a2593, transparent);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#7a2593), to(transparent));
-    background-image: -webkit-linear-gradient(#7a2593, transparent);
-    background-image: linear-gradient(#7a2593, transparent), linear-gradient(#7a2593, transparent);
-    border-top: 2px solid #7a2593;
+    background-image: -moz-linear-gradient(#1e4583, transparent), -moz-linear-gradient(#1e4583, transparent);
+    background-image: -o-linear-gradient(#1e4583, transparent), -o-linear-gradient(#1e4583, transparent);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1e4583), to(transparent));
+    background-image: -webkit-linear-gradient(#1e4583, transparent);
+    background-image: linear-gradient(#1e4583, transparent), linear-gradient(#1e4583, transparent);
+    border-top: 2px solid #1e4583;
     clear: both;
     border-top-right-radius: 10px;
     border-top-left-radius: 0px; }
@@ -1125,6 +1126,16 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       grid-area: 1 / 7 / 1 / 8; }
     .sheet-pc div.sheet-social div.sheet-contacts div.repitem div.sheet-settings {
       grid-column: 1 / 8; }
+  .sheet-pc div.sheet-htab {
+    margin-right: -47px; }
+    .sheet-pc div.sheet-htab input[type='radio'] {
+      margin-right: -80px;
+      top: 4px;
+      width: 80px; }
+      .sheet-pc div.sheet-htab input[type='radio'] + h1 {
+        color: #9a9a9a; }
+      .sheet-pc div.sheet-htab input[type='radio']:hover ~ h1, .sheet-pc div.sheet-htab input[type='radio']:checked ~ h1 {
+        color: #1e4583; }
 
 /***** PC ROWS & COLUMNS SETTINGS *****/
 .sheet-pc-row {
@@ -1212,26 +1223,14 @@ div.sheet-right-tri {
   border-top: 20px solid transparent; }
 
 div.sheet-triangle {
-  border-right: 30px solid whitesmoke; }
+  border-right: 30px solid #afd3e2; }
 
 div.sheet-right-tri {
-  border-left: 30px solid whitesmoke; }
+  border-left: 30px solid #afd3e2; }
 
 div.sheet-right-header {
   margin-right: -8%;
   float: left; }
-
-/***** SECONDARY HEADERS LIKE ON SKILLS *****/
-div.sheet-htab {
-  margin-right: -47px; }
-  div.sheet-htab input[type='radio'] {
-    margin-right: -80px;
-    top: 4px;
-    width: 80px; }
-    div.sheet-htab input[type='radio'] + h1 {
-      color: #9a9a9a; }
-    div.sheet-htab input[type='radio']:hover ~ h1, div.sheet-htab input[type='radio']:checked ~ h1 {
-      color: #fff; }
 
 /***** BOXES FOR DIFFERENT PC SECTIONS *****/
 .sheet-pc-box {
@@ -2449,30 +2448,28 @@ input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body div.she
   display: none; }
 
 .sheet-pc .sheet-tabs input[value*='arms'] ~ button[name*='arms'], .sheet-pc .sheet-tabs input[value*='augs'] ~ button[name*='augs'], .sheet-pc .sheet-tabs input[value*='core'] ~ button[name*='core'], .sheet-pc .sheet-tabs input[value*='gear'] ~ button[name*='gear'], .sheet-pc .sheet-tabs input[value*='options'] ~ button[name*='options'], .sheet-pc .sheet-tabs input[value*='social'] ~ button[name*='social'], .sheet-pc .sheet-tabs input[value*='magic'] ~ button[name*='magic'], .sheet-pc .sheet-tabs input[value*='matrix'] ~ button[name*='matrix'], .sheet-pc .sheet-tabs input[value*='vehicle'] ~ button[name*='vehicle'] {
-  background-color: whitesmoke;
-  box-shadow: inset 0px 0px 3px 1px #e31715;
+  background-color: #afd3e2;
+  box-shadow: inset 0px 0px 3px 1px #1e4583;
   color: #fff; }
 
 /*****************************************************************************************/
 /**************************************** FOOTER ****************************************/
 /***************************************************************************************/
 /**** Footer ****/
-.sheet-footer {
+div.sheet-footer {
   border: none;
   font-size: 0.55em;
   line-height: 15px;
   margin-top: 15px;
   text-align: left;
   width: 700px; }
-
-div.sheet-footer div {
-  display: inline-block;
-  width: 90%; }
-
-div.sheet-footer img {
-  float: right;
-  vertical-align: top;
-  width: 5%; }
+  div.sheet-footer div {
+    display: inline-block;
+    width: 90%; }
+  div.sheet-footer img {
+    float: right;
+    vertical-align: top;
+    width: 5%; }
 
 /********************************************************************************************************/
 /**************************************** REPEATING SECTIONS *******************************************/
@@ -2609,151 +2606,6 @@ div.sheet-footer img {
 
 .sheet-rolltemplate-rolls span.sheet-template-desc .inlinerollresult {
   font-size: 14px; }
-
-/********************************************************************************************************/
-/*******************************         Charactermancer        ****************************************/
-/******************************************************************************************************/
-div.sheet-mancer-box {
-  border: 2px solid #610b0d;
-  background-color: #e7e6e5;
-  margin: 1% 2%;
-  padding: 1% 2%; }
-
-div.sheet-mancer-box input[type='radio'],
-div.sheet-mancer-box input[type='checkbox'] {
-  opacity: 1;
-  height: 1.5em;
-  width: 1.5em; }
-
-div.sheet-mancer-box input[type='text'] {
-  background-color: white;
-  border: 1px solid #333;
-  width: 100%; }
-
-div.sheet-mancer-box label {
-  display: inline-block; }
-
-div.sheet-mancer-box div.sheet-pick-builder label {
-  margin: 2% 2% 1% 0%;
-  width: 15%; }
-
-div.sheet-mancer-box label {
-  display: inline-block;
-  margin: 2% 2%; }
-
-div.sheet-mancer-box h1 {
-  text-decoration: underline; }
-
-div.sheet-mancer-box label > h4 {
-  display: inline; }
-
-div.sheet-mancer-box textarea {
-  overflow: scroll;
-  min-height: 5em;
-  width: 100%; }
-
-div.sheet-mancer-box hr {
-  margin-top: 3%;
-  margin-bottom: 3%; }
-
-div.sheet-mancer-box button,
-div.sheet-bottombar button {
-  border-radius: 2px;
-  font-weight: bolder;
-  height: 2em;
-  padding: 5px;
-  text-transform: capitalize;
-  background-color: #333;
-  box-shadow: inset 0px 0px 3px 1px #7c7c7c;
-  color: #fff; }
-
-div.sheet-mancer-box button:not(disabled):hover,
-div.sheet-mancer-box button:not(disabled):focus,
-button[name='act_import_launch']:hover,
-button[name='act_import_launch']:focus {
-  text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #e31715;
-  text-transform: capitalize;
-  border: 0.1em dotted white; }
-
-div.sheet-mancer-box button[type='action'],
-div.sheet-mancer-box button[type='finish'] {
-  font-size: 1.5em;
-  width: 20%; }
-
-div.sheet-mancer-box button[type='finish']:disabled {
-  color: rgba(255, 255, 255, 0.2);
-  cursor: not-allowed; }
-
-div.sheet-mancer-box button[type='cancel'] {
-  margin-top: 3%;
-  float: right;
-  font-size: 1em; }
-
-div.sheet-mancer-box .sheet-feedback {
-  color: #000e3b; }
-
-div.sheet-mancer-box .sheet-warning {
-  color: #610b0d; }
-
-div.sheet-mancer-box .sheet-results,
-div.sheet-mancer-box .sheet-error {
-  border: 1px solid #333;
-  box-shadow: inset 0px 0px 3px 1px #7c7c7c;
-  height: 30em;
-  margin-top: 2%;
-  overflow: scroll;
-  padding: 1%; }
-
-div.sheet-mancer-box .sheet-results {
-  border: 1px solid #000e3b;
-  margin-right: 3%;
-  background: rgba(136, 221, 4, 0.1); }
-
-div.sheet-mancer-box .sheet-error {
-  border: 1px solid #610b0d;
-  background: rgba(204, 7, 1, 0.11); }
-
-div.sheet-result-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr; }
-
-div.sheet-result-grid h4:nth-of-type(1) {
-  grid-column: 1 / 1;
-  grid-row: 1 / 1; }
-
-div.sheet-result-grid h4:nth-of-type(2) {
-  grid-column: 2 / 2;
-  grid-row: 1 / 1; }
-
-div.sheet-results {
-  grid-column: 1 / 1;
-  grid-row: 2 / 2; }
-
-div.sheet-ignored {
-  grid-column: 2 / 2;
-  grid-row: 2 / 2; }
-
-div.sheet-hidden,
-div.sheet-hidden-skills {
-  display: none; }
-
-h4.sheet-hidden-header {
-  display: inline; }
-
-input[name='comp_hidden']:checked + div.sheet-hidden,
-input[name='comp_hidden']:checked + div.sheet-hidden-skills {
-  display: block; }
-
-div.sheet-hidden label {
-  display: inline-block;
-  width: 30%;
-  margin: 1% 1%; }
-
-div.sheet-hidden div {
-  display: inline-block;
-  font-weight: bold;
-  margin-right: 2%;
-  width: 40%; }
 
 /********************************************************************************************************/
 /*******************************         FireFox             *******************************************/
