--- a/Shadowrun4thEdition/Shadowrun4thEdition.scss
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.scss
@@ -8,6 +8,7 @@
 	============================= */
 	@import 'src/scss/base/_base'; 
   @import 'src/scss/base/_placeholders'; 
+  @import 'src/scss/base/_generic'; 
 
 /* SWITCHES
 	============================= */
@@ -18,7 +19,9 @@
 /***** TABS FOR SHEETS *****/
 .sheet-settings-toggle,
 .sheet-settings-flag {
-	 input { width: 3em;}
+	 input { 
+    width: 3em;
+  }
 
 	input[type='checkbox'] + span {
       background : transparent;
@@ -30,21 +33,7 @@
   }
 }
 
-
 /***** GENERIC STYLES *****/
-.sheet-center { text-align: center; }
-
-select {
-	&.sheet-attribute-select {
-		option:nth-of-type(1n+5) { color: $accent1; }
-		option:nth-of-type(1n+9) { color: $accent;	}
-	}
-
-	&.sheet-limit-select  {
-		option:nth-of-type(1n+5) { color: $accent1; }
-	}
-}
-
 @import 'src/scss/_matrixdevice'; 
 
 .sheet-text-capitalize {
@@ -73,7 +62,7 @@ select {
 		}
 
 		h1 {
-			background-color: $accent1;
+			background-color: $primary;
 			font-size       : 1em;
 			letter-spacing  : 2px;
 			line-height     : 20px;
@@ -818,6 +807,26 @@ select {
      div.sheet-vehicle {
       
      }
+
+     /***** SECONDARY HEADERS LIKE ON SKILLS *****/
+    div.sheet-htab {
+      margin-right: -47px;
+
+      input {
+        &[type='radio'] {
+          margin-right: -80px;
+          top         : 4px;
+          width       : 80px;
+
+          & + h1 {color: #9a9a9a;}
+
+          &:hover ~ h1,
+          &:checked ~ h1  {
+            color: $accent1;
+          }
+        }
+      }
+    }
 	}
 	@import 'src/scss/_pc'; 
 
@@ -840,24 +849,25 @@ select {
 /**************************************** FOOTER ****************************************/
 /***************************************************************************************/
 	/**** Footer ****/
-	.sheet-footer {
+	div.sheet-footer {
 		border     : none;
 		font-size  : 0.55em;
 		line-height: 15px;
 		margin-top : 15px;
 		text-align : left;
-		width      : 700px;}
+		width      : 700px;
 
-	div.sheet-footer div {
-		display: inline-block;
-		width: 90%;
-	}
+    div {
+      display: inline-block;
+      width: 90%;
+    }
 
-	div.sheet-footer img {
-		float: right;
-		vertical-align: top;
-		width: 5%;
-	}
+    img {
+      float: right;
+      vertical-align: top;
+      width: 5%;
+    }
+  }
 
 /********************************************************************************************************/
 /**************************************** REPEATING SECTIONS *******************************************/
@@ -869,12 +879,6 @@ select {
 /********************************************************************************************************/
 
 	@import 'src/scss/_rolltemplate';
-
-/********************************************************************************************************/
-/*******************************         Charactermancer        ****************************************/
-/******************************************************************************************************/
-	@import 'src/scss/_importer';
-
 
 /********************************************************************************************************/
 /*******************************         FireFox             *******************************************/
@@ -892,4 +896,4 @@ input[type=number] {
  /********************************************************************************************/
 /*****************         French Adjustments                ********************************/
 /*******************************************************************************************/
-	@import 'src/scss/_lang-fr';
+	@import 'src/scss/layouts/_lang-fr';
