--- a/Shadowrun4thEdition/src/pug/_variables.pug
+++ b/Shadowrun4thEdition/src/pug/_variables.pug
@@ -19,6 +19,9 @@
 //- WEAPON ARRAY
 - const weaponModes = ['BF', 'FA', 'SA', 'SS', 'Other'];
 
+//- TABS
+- const tabs = ['core', 'arms', 'augs', 'gear', 'magic', 'matrix', 'social', 'vehicle']
+
 //- LOOP OBJECTS
 - const limitObject = {'Mental':'mental_limit', 'Physical':'physical_limit', 'Social':'social_limit', 'Attack':'attack', 'Data Processing':'data_processing', 'Firewall':'firewall', 'Sleaze':'sleaze'};
 - const hostObject = {'Host Rating': ['host_rating', '5'], 'Attack': ['attack', '5'], 'Sleaze': ['sleaze', '6'], 'Data Processing': ['data_processing', '7'], 'Firewall': ['firewall', '8']};
