--- a/Shadowrun4thEdition/src/scss/_hide.scss
+++ b/Shadowrun4thEdition/src/scss/_hide.scss
@@ -24,8 +24,12 @@
 
 	/***** TABS *****/
 	@each $tab in $tabs {
-		.sheet-#{$tab} { @extend %display-none; }
-		.sheet-options_toggle[value='#{$tab}'] ~ .sheet-#{$tab} { @extend %display-inline-block; }
+		.sheet-#{$tab} { 
+      @extend %display-none; 
+    }
+		.sheet-options_toggle[value='#{$tab}'] ~ .sheet-#{$tab} { 
+      @extend %display-inline-block;
+    }
 	}
 
 	/***** SWITCH BETWEEN DIFFERENT TABS *****/ 
@@ -206,7 +210,7 @@
 	}
 
 	%highlight-button {
-		background-color: $secondary;
-		box-shadow      : inset 0px 0px 3px 1px #e31715; 
+		background-color: $primary;
+		box-shadow      : inset 0px 0px 3px 1px $accent1; 
 		color           : #fff;
 	}
