--- a/Shadowrun4thEdition/src/scss/_pc.scss
+++ b/Shadowrun4thEdition/src/scss/_pc.scss
@@ -84,32 +84,17 @@
 		border-top: 20px solid transparent;
 	}
 
-	div.sheet-triangle {border-right: 30px solid $secondary;}
-	div.sheet-right-tri {border-left: 30px solid $secondary;}
+	div.sheet-triangle {
+    border-right: 30px solid $primary;
+  }
+
+	div.sheet-right-tri {
+    border-left: 30px solid $primary;
+  }
 
 	div.sheet-right-header {
 		margin-right: -8%;
 		float: left;
-	}
-
-/***** SECONDARY HEADERS LIKE ON SKILLS *****/
-	div.sheet-htab {
-		margin-right: -47px;
-
-		input {
-			&[type='radio'] {
-				margin-right: -80px;
-				top         : 4px;
-				width       : 80px;
-
-				& + h1 {color: #9a9a9a;}
-
-				&:hover ~ h1,
-				&:checked ~ h1  {
-					color: #fff;
-				}
-			}
-		}
 	}
 
 
