--- a/Shadowrun4thEdition/src/scss/base/_base.scss
+++ b/Shadowrun4thEdition/src/scss/base/_base.scss
@@ -14,25 +14,33 @@
 			margin: 0px !important;
 			padding: 1px 2px;
 
-            border: {
-                bottom             : 0.01em solid #666;
-                bottom-right-radius: 0.01em;
-                color              : hsl(0, 0%, 70%);
-                radius             : 0.25em !important; 
-                right              : 0.02em solid hsl(0, 0%, 20%);
-                style              : outset;
-            }
+      border: {
+          bottom             : 0.01em solid #666;
+          bottom-right-radius: 0.01em;
+          color              : hsl(0, 0%, 70%);
+          radius             : 0.25em !important; 
+          right              : 0.02em solid hsl(0, 0%, 20%);
+          style              : outset;
+      }
+
+      &:hover, 
+      &:focus, 
+      &:active { 
+        font-weight: bold;
+        background-color: $accent1;
+      }
 		}
 
-		&:before {display: none;}
-	    &:hover, &:focus, &:active { font-weight : bold; }
+		&:before {
+      display: none;
+    }
 
-	    & > span {
-	    	display: block;
-	    	overflow: hidden;
-	    	text-overflow: ellipsis;
-	    	width: 100%;
-	    }
+    & > span {
+    	display: block;
+    	overflow: hidden;
+    	text-overflow: ellipsis;
+    	width: 100%;
+    }
 	}
 
 	div {
@@ -69,7 +77,8 @@
 		&[type='number'] {
 			height    : 20px;
 
-			&:hover, &:focus {
+			&:hover, 
+      &:focus {
 				background-color: #d2d1cd;
 				color: $blackish;
 			}
@@ -90,8 +99,8 @@
 
 	select {
 		border-radius: 2px;
-		border: 1px solid #000;
-		box-shadow: inset 0px 0px 3px 1px #7c7c7c;
+		border: 1px solid $blackish;
+		box-shadow: inset 0px 0px 3px 1px $grayshadow;
 		margin-bottom: 0px;
 		width: auto;
 
@@ -111,8 +120,8 @@
 
 	textarea {
 		border-radius: 2px;
-		border: 1px solid #000;
-		box-shadow: inset 0px 0px 3px 1px #7c7c7c;
+		border: 1px solid $blackish;
+		box-shadow: inset 0px 0px 3px 1px $grayshadow;
 		height: 50px;
 		overflow-wrap: break-word;
 		overflow: hidden;
@@ -121,15 +130,12 @@
 		white-space: pre-line;}
 
 	.charsheet {
-    background: rgb(175,211,226);
-    background: linear-gradient(90deg, rgba(175,211,226,1) 0%, rgba(245,245,245,1) 17%, rgba(255,255,255,1) 78%, rgba(175,211,226,1) 100%);
+    background: $primary;
+    background: linear-gradient(90deg, rgba($primary,1) 0%, rgba(245,245,245,1) 17%, rgba(255,255,255,1) 78%, rgba($primary,1) 100%);
     width: 850px; 
-    box-shadow: inset 0px 0px 3px 1px #7c7c7c;
+    box-shadow: inset 0px 0px 3px 1px $grayshadow;
     color: $blacker;
   }
-
-	.sheet-red {color: $secondary;  }
-	.sheet-text-align-center {text-align: center;}
 
 	input[name='attr_stats_toggle'],
 	input[name='attr_stats_toggle'] + span {
@@ -140,9 +146,3 @@
 		opacity: 0;
 		z-index: 2;
 	}
-
-  .sheet-eclipse {
-      overflow: hidden;
-      text-overflow: ellipsis; 
-      white-space: nowrap;  
-  }
