--- a/Shadowrun4thEdition/src/scss/components/_tabs.scss
+++ b/Shadowrun4thEdition/src/scss/components/_tabs.scss
@@ -1,19 +1,20 @@
 .sheet-tabs {
   button {
     &[type='action'] {
-      background-color: #333;
-      border-radius   : 2px;
-      border          : 1px solid #000;
-      box-shadow      : inset 0px 0px 3px 1px #7c7c7c;
-      color           : #fff;
-      font-size       : 1em;
-      font-weight     : bolder;
-      text-transform  : capitalize;
-      padding         : 5px;
+      box-shadow: inset 0px 0px 3px 1px $grayshadow;
+      color: $white;
+    }
 
-      &.sheet-pictos {
-        text-transform: lowercase;
-      }
+    background-color: $blackish;
+    border-radius   : 2px;
+    border          : 1px solid #000;
+    font-size       : 1em;
+    font-weight     : bolder;
+    text-transform  : capitalize;
+    padding         : 5px;
+
+    &.sheet-pictos {
+      text-transform: lowercase;
     }
 
     &[type='roll'] {
@@ -24,7 +25,8 @@
       vertical-align: top;
 
       &:hover {
-        text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #e31715;
+        text-shadow: 1px 1px 2px black, 0 0 25px $accent1, 0 0 5px $grayshadow;
+        color: $white;
       }
     }
   }
